--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+*::after,
+*::before,
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 20px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +20,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  margin: 1rem 0.5rem;
+  padding: 0.3rem;
+  height: 2rem;
 }
